welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: '=' expected but ';' found.
  ecritMessage(0)
^