welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code

override def run() {
   var cpt=-1
  
  ecritMessage(0)
  setPos(0,1)
  
  for (i<- 0 to getMondeLargeur()-1){
    for (j<-0 to getMondeHauteur()-1){
      setPos(i,j)
      cpt=cpt+1
      ecritMessage(cpt)
      
}
  }
}